@@ -1,4 +1,8 @@
-﻿Changes from original BP mod
+﻿- Fix situational 'argument cannot be null' Linq error when attempting to find service buildings
+- Fix intercity buses not recognizing new connections
+
+
+Changes from original BP mod
 
 - Convert from Detours to Harmony
 - Fix compatibility with More Vehicles mod
